package br.enums;

public enum FormaPagamento {
    CARTAO_CREDITO,
    CARTAO_DEBITO,
    BOLETO,
    PIX
}
