package br.enums;

public enum StatusPagamento {
    APROVADO,
    RECUSADO,
    PENDENTE
}
