package br.model.enums;

public enum StatusPedido {
    PROCESSANDO,
    PENDENTE,
    ENVIADO,
    ENTREGUE,
    CANCELADO
}
